# OS

CL2/: README.md  main.cpp
Exam/: CaesarCipher.java
Lab1/: Creator.cpp  Main.cpp  Reporter.cpp  employee.h
Lab2/: CMakeLists.txt  average_wrapper.cpp  average_wrapper.h  core.cpp  core.h  main.cpp  min_max_wrapper.cpp  min_max_wrapper.h  simple_test.cpp  simple_test.h  test_main.cpp  thread_utils.cpp  thread_utils.h
Lab3/: AutoHandle.hpp  CMakeLists.txt  IPCQueue.cpp  IPCQueue.hpp  Marker.cpp  Marker.h  Orchestrator.cpp  Orchestrator.h  QueueTests.cpp  SharedData.h  Utils.h  main.cpp  test_main.cpp
Lab4/: CMakeLists.txt  main.cpp
Lab5/: CMakeLists.txt  ClientProcess.cpp  ClientProcess.h  Employee.h  FileController.cpp  FileController.h  ServerProcess.cpp  ServerProcess.h  SyncManager.cpp  SyncManager.h  Utils.h  main.cpp
